# konex

./: AUTHORS  Doxyfile  configure.in  konex.dsp  konex.dsw  konex.kdevelop  konex.kdevelop.pcs  konex.kdevses  konex.ncb  konex.opt  konex.plg
CVS/: Entries  Entries.Extra  Entries.Extra.Old  Entries.Old  Repository
Release/: config.xml  konex.pch  vc60.idb
src/: Makefile.am  ai.cpp  ai.h  config.cpp  config.h  console.cpp  console.h  defs.h  entity.cpp  entity.h  explosion.cpp  explosion.h  game.cpp  game.h  in_linux.h  in_main.cpp  in_main.h  in_win.h  interface.cpp  interface.h  item.cpp  item.h  konex.cpp  konex.h  list_c.h  map.cpp  map.h  menu.cpp  menu.h  missile.cpp  missile.h  net_main.cpp  net_main.h  planets.cpp  planets.h  player.cpp  player.h  ships.cpp  ships.h  snd_main.cpp  (+33 more)
src/CVS/: Entries  Entries.Extra  Entries.Old  Repository
src/tinyxml/: echo.dsp  tinyXmlTest.dsp  tinyXmlTestSTL.dsp  tinyxml.dsw  tinyxmlSTL.dsp  tinyxml_lib.dsp  xmltest
src/tinyxml/CVS/: Entries  Entries.Extra  Entries.Extra.Old  Entries.Old  Repository
src/tinyxml/docs/CVS/: Entries  Entries.Extra  Repository
templates/: cpp
templates/CVS/: Entries  Entries.Extra  Repository
